Fixes price box from be behind full package box

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -174,6 +174,8 @@ div.faq p	{
 	padding: 4px 30px 6px 30px;
 	font-size: 1.5em;
 	font-weight: bold;
+	position: relative;
+	z-index: 1000;
 	background-color: #34778a;
       -webkit-border-radius: 18px;
          -moz-border-radius: 18px;
